# MiroFish-OpenRouter

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  settings.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  entity_reader.py  graph_builder.py  graph_memory_updater.py  graph_tools.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py
backend/app/storage/: __init__.py  embedding_service.py  graph_storage.py  neo4j_schema.py  neo4j_storage.py  ner_extractor.py  search_service.py
backend/app/utils/: file_parser.py  llm_client.py  logger.py  notifier.py  retry.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: home-styles.css
frontend/src/: App.vue  legacy-global.css  main.js  tailwind.css
frontend/src/api/: index.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/composables/: useAutoAdvance.js
frontend/src/router/: index.js
frontend/src/utils/: errorReporter.js
frontend/src/views/: Home.css  Home.vue  InteractionView.vue  MainView.vue  Process.vue  ReportView.vue  Settings.vue  SimulationRunView.vue  SimulationView.vue
