[project]
name = "mirofish-offline-backend"
version = "0.2.0"
description = "MiroFish-Offline - Self-hosted fork running on Neo4j + any OpenAI-compatible API"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # 核心框架
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    
    # LLM 相关
    "openai>=1.0.0",
    
    # Neo4j graph database driver
    "neo4j>=5.15.0",
    
    # OASIS 社交媒体模拟
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",
    # Declared explicitly (it's transitive via sentence-transformers) so the
    # pytorch-cpu index pin in [tool.uv.sources] applies — see below
    "torch>=2.0.0",
    
    # 文件处理
    "PyMuPDF>=1.24.0",
    # 编码检测（支持非UTF-8编码的文本文件）
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    
    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[tool.uv.sources]
# CPU-only torch: the default PyPI build on linux x86_64 drags in ~5 GB of
# nvidia-*-cu12 CUDA wheels that are useless without a GPU. torch is only
# needed by sentence-transformers (OASIS feed recommendations), which runs
# fine on CPU.
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.16",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["uploads"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes (real bugs), I: import sorting,
# B: bugbear (likely bugs), UP: outdated syntax
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E501",  # long lines: prompts and log messages routinely exceed any limit
    "E402",  # module-level import not at top: config/env setup precedes imports in entry points
    "UP042", # class Foo(str, Enum) works fine; converting to StrEnum is churn without benefit
]

[tool.pyrefly]
project-includes = ["app", "run.py"]
project-excludes = ["**/uploads/**", "scripts/**"]
